--- a/travel.html
+++ b/travel.html
@@ -64,7 +64,9 @@
              display: table;
              clear: both;
          }
-
+         h2 {
+          text-shadow: 2px 2px #5e7062;
+}
 
          .description {  
                     padding:5px;
@@ -75,7 +77,7 @@
                     text-transform: uppercase;
                     text-align:center;
                 }
- 
+                background: radial-gradient(#e66465, #9198e5);
     </style>
      </head>
 
@@ -93,8 +95,8 @@
     </div>
     
     <body style="background-color: rgb(156, 185, 167);">
-        
-    <h1><b><i>&#x1D54B&#x1D563&#x1D552&#x1D567&#x1D556&#x1D55D&#x1D55A&#x1D55F&#x1D558- it leaves you speechless, then turns you into a storyteller</i></b></h1><br>
+
+    <h1><b><i>Traveling- it leaves you speechless, then turns you into a storyteller</i></b></h1><br>
 
         <h2><li>Top 5 amazing places to visit</li></h2><br>
 
@@ -300,4 +302,10 @@
 
 </body>
 </html>
+
+
+
+
+
+
 
