--- a/Projekti_final_Gr17.HTML
+++ b/Projekti_final_Gr17.HTML
@@ -61,7 +61,7 @@ body{
     <div id="navbar">
         <ul>
                 
-            <li class="active"><a href="home.HTML">HOME</a></li>
+            <li ><a href="home.HTML">HOME</a></li>
             <li><a href="health.HTML">HEALTH</a></li>
             <li><a href="travel.html">TRAVEL</a></li>
             <li><a href="ThingsToTry.html">THINGS TO TRY</a></li>
