--- a/aboutus.html
+++ b/aboutus.html
@@ -66,6 +66,28 @@
     <p>Reason of this website is to counsel people how to live a <span style="color:rgb(36, 49, 41);font-weight:bold;border:1px solid black;">perfect life</span> by doing simple things</p>
      <p> like eating healthy,traveling and taking care of ourselves.</p>
      </div>
+     <br>
+
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("#hide").click(function(){
+    $("b").hide();
+  });
+  $("#show").click(function(){
+    $("b").show();
+  });
+});
+</script>
+
+
+<b>We are very happy that you're exploring our website :)</b>
+<br>
+
+<button id="show">Show me</button>
+<button id="hide">Hide me</button>
+
+
      <h3>Location</h3>
      <p>Prishtine,Bregu i Diellit.</p>
      <h3>Contact Us</h3>
@@ -138,6 +160,20 @@
      </svg>  
      Thank you for visiting our page!
      </h3>
+
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script>
+      $(document).ready(function(){
+       $("b").click(function(){
+       $(this).hide();
+       });
+       });
+     </script>
+
+      <pre> <b>     Your opinion is very important for us, so please 
+      leave a message if you have any suggestions for us.
+      If you click on this text, it will disappear.</pre> </b>
+
 
      <div class="div4">
     <title>Send us a message</title>
