--- a/ThingsToTry.html
+++ b/ThingsToTry.html
@@ -79,12 +79,15 @@
 
 <h2><li>Top things to try in your life</li></h2><br>
 
+<b>
 <article>
 <dl>
     <dt style="font-size: 18px;"><b>Meditate</b></dt>
     <dd>Speaking of meditation ... there's more evidence now than ever that meditation is beneficial for your mental and physical health. According to Everyday Health, meditation can improve concentration, reduce stress, prevent cognitive decline, and keep your brain healthy and alert as you age.</dd>
  </dl>
 </article>
+</b>
+
 
 <article>
  <dl>
@@ -132,7 +135,7 @@
  <dl>
     <dt style="font-size: 18px;"><b>Volunteer Work</b></dt>
     <dd> Working as a volunteer is something that everyone should do at least once in life. You will become a  better person and above all get the chance to help others who are less fortuned. Helping others is good for your heart, and together we can make the world a better place for all.
-         You’ll also become more humble and get the chance to meet other cultures!
+         You’ll also become more humble and get the chance to meet other cultures!You happiness will increase and you will have
          <a id="demo"></a>
          <script>
             const vhours_week1 = 2;
@@ -182,6 +185,12 @@
     </dd>
  </dl>
 </article>
+<body>
+   <p id="demo"></p>
+   <script>
+   document.getElementById("demo").innerHTML =Number.MAX_VALUE+" reasons to be happy.";
+   </script>
+   </body>
 
 <button onclick="myFunction()">Try it</button>
 
@@ -207,14 +216,9 @@ function myFunction() {
  <div id="grad1"></div>
 
 
- <div id="ex4">
+<div id="ex4">
    Don't be afraid to try new things.The best way to not regret the things you didn't do is to do them.
    </div>
-
-
-
- 
-
 
  </body>
  </html>
