--- a/aboutus.html
+++ b/aboutus.html
@@ -43,6 +43,14 @@
              float:right;
          }
 
+   .iframe {
+    float: left;
+    width: 100%;;
+    display: flex;
+    justify-content: center;
+    padding: 2px;
+}
+
         
 </style>
 
@@ -164,15 +172,15 @@ $(document).ready(function(){
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script>
       $(document).ready(function(){
-       $("b").click(function(){
+       $("h4").click(function(){
        $(this).hide();
        });
        });
      </script>
 
-      <pre> <b>     Your opinion is very important for us, so please 
+      <pre> <h4>      Your opinion is very important for us, so please 
       leave a message if you have any suggestions for us.
-      If you click on this text, it will disappear.</pre> </b>
+      If you click on this text, it will disappear.</pre> </h4>
 
 
      <div class="div4">
@@ -247,6 +255,16 @@ $(document).ready(function(){
     }
   }
   </script>
+
+<div class="iframe">
+<iframe 
+src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15711.333070445082!2d21.163942112645277!3d42.65060709168499!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549ec5989c3e7b%3A0xdce360181b819e84!2sBregu%20i%20Diellit%2C%20Pristina!5e0!3m2!1sen!2s!4v1642121833401!5m2!1sen!2s" 
+width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+</iframe>
+</div>
+</div>
+
+
 </body>
 </html>
 
